--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,17 +18,6 @@ services:
     volumes:
       - ./docker-configs/redis.conf:/etc/redis.conf
       - ./docker-data/redis:/var/lib/redis
-    command: redis-server /etc/redis.conf
+    command: sh -c 'mkdir -p /var/lib/redis && chown redis:redis /var/lib/redis && redis-server /etc/redis.conf'
     ports:
-      - 6379
-  phpredmin:
-    image: sasanrose/phpredmin
-    restart: always
-    links:
-      - redis:redis
-    ports:
-      - 127.0.0.1:31301:80
-    depends_on:
-      - redis
-    environment:
-      PHPREDMIN_DATABASE_REDIS_0_HOST: redis
+      - 6379:6379
